  * Add uClinux support to ostable and triplettable.
    Thanks to Simon Richter <sjr@debian.org>.
  * When aborting due to file conflicts print the version of the conflicted
    package. Closes: #540019
  * Remove double slash in database path visible to the user in some error
    conditions.
  * Stop macthing sparc64-*-* GNU triplets with sparc Debian architecture.

  [ Raphael Hertzog ]
  * Replace install-info by a wrapper around GNU's install-info. The wrapper
    will be dropped in squeeze+1. dpkg now Breaks: old versions of
    info-browsers that do not depend on the new install-info package
    that provides the real functionality. Closes: #9771, #523980
    See http://wiki.debian.org/Transitions/DpkgToGnuInstallInfo for details.
  * Fix dpkg's preinst in case /var/lib/dpkg/alternatives contains unexpected
    sub-directories. Closes: #535138
    And also when one of the file doesn't contain correct alternatives
    information (improper number of lines). Closes: #537558
  * Upgrade Standards-Version to 3.8.2 (no changes).
  * Update deb-substvars(5) to list fields that do not support substvars.
    Closes: #535353
  * Fix dpkg-parsechangelog to include all entries with -v0 parameter.
    Closes: #537800
  * Fix update-alternatives to mention the correct slave link that can't
    be installed due to a conflicting file instead of quoting the master link.
  * Add support for extra override file in dpkg-scanpackages. Thanks to Robert
    Millan for the patch. Closes: #537559
  * Add support for extra override file in dpkg-scansources.
  * Document format of extra override file in a new manual page
    deb-extra-override(5).
  * Update sample in dpkg-gensymbols(1) to give an accurate listing of
    64 bit arches. Thanks to Julien Cristau for the patch. Closes: #540382
  * Create /etc/cron.daily/dpkg to handle the backup of
    /var/lib/dpkg/status in /var/backups. This is taken out of the cron
    package and need no conflicts/breaks as the code does nothing if