@@ -1,6 +1,7 @@
 ../dpkg.cfg etc/dpkg
 ../archtable usr/share/dpkg
 
+etc/dpkg/dpkg.cfg.d
 etc/alternatives
 usr/bin/dpkg
 usr/bin/dpkg-deb
