@@ -1,5 +1,6 @@
 ../dselect.cfg etc/dpkg
 
+etc/dpkg/dselect.cfg.d
 usr/bin/dselect
 usr/lib/dpkg/methods
 usr/share/locale/*/LC_MESSAGES/dselect.mo
