@@ -1,4 +1,4 @@
-.TH dpkg.cfg 5 "2006-02-28" "Debian Project" "dpkg suite"
+.TH dpkg.cfg 5 "2009-08-20" "Debian Project" "dpkg suite"
 .SH NAME
 dpkg.cfg \- dpkg configuration file
 .
@@ -10,6 +10,8 @@ here. Comments are allowed by starting a line with a hash sign
 ("\fB#\fR").
 .
 .SH FILES
+.I /etc/dpkg/dpkg.cfg.d/[0-9a-zA-Z_-]*
+.br
 .I /etc/dpkg/dpkg.cfg
 .br
 .I ~/.dpkg.cfg
