@@ -1,4 +1,4 @@
-.TH dselect 1 "2006-02-28" "Debian Project" "Debian"
+.TH dselect 1 "2009-08-20" "Debian Project" "Debian"
 .SH NAME
 dselect \- Debian package management frontend
 .
@@ -44,7 +44,8 @@ of \fBdselect\fP or show additional information about the program.
 .
 .SH OPTIONS
 All options can be specified both on the commandline and in the \fBdselect\fP
-configuration file \fI/etc/dpkg/dselect.cfg\fP. Each line in the
+configuration file \fI/etc/dpkg/dselect.cfg\fP or the files on the
+configuration directory \fI/etc/dpkg/dpkg.cfg.d/\fP. Each line in the
 configuration file is either an option (exactly the same as the
 commandline option but without leading dashes) or a comment (if it starts
 with a \fB#\fR).
