@@ -1,4 +1,4 @@
-.TH dselect.cfg 5 "2006-02-28" "Debian Project" "dpkg suite"
+.TH dselect.cfg 5 "2009-08-20" "Debian Project" "dpkg suite"
 .SH NAME
 dselect.cfg \- dselect configuration file
 .
@@ -10,6 +10,8 @@ here. Comments are allowed by starting a line with a hash sign
 ("\fB#\fR").
 .
 .SH FILES
+.I /etc/dpkg/dselect.cfg.d/[0-9a-zA-Z_-]*
+.br
 .I /etc/dpkg/dselect.cfg
 .br
 .I ~/.dselect.cfg
