@@ -31,6 +31,8 @@ dpkg (1.15.4) UNRELEASED; urgency=low
   * Remove double slash in database path visible to the user in some error
     conditions.
   * Stop macthing sparc64-*-* GNU triplets with sparc Debian architecture.
+  * Add support for config.d style directories in dpkg and dselect,
+    (/etc/dpkg/dpkg.cfg.d and /etc/dpkg/dselect.cfg.d respectively).
 
   [ Raphael Hertzog ]
   * Replace install-info by a wrapper around GNU's install-info. The wrapper
